# tomato

./: .gitignore  404.html  LICENSE  README.md  TODO.md  constants.json  controller-test.html  index.html  sitemap.xml
.github/actions/deploy/: action.yml
.github/actions/docker-build-push/: action.yml
.github/actions/version/: action.yml
.github/workflows/: build-client.yml  build-deploy-on-push.yml  build-deploy-on-tag.yml  build-on-push.yml  build-on-tag.yml  build-server-container.yml  docs.yml
assets/: extra.css
client/: .eleventy.js  .eslintrc.js  .prettierignore  .prettierrc  build.js  forge.config.js  index.html  package-lock.json  package.json  tailwind.config.js
client/assets/icons/: tomato.icns
client/scripts/: build.js  build_ffmpeg_miniredis.sh  create_standlone_folder.sh  download_static_binaries.sh  generate_colors.js  generate_libs.sh  install_vendored_libs.sh
client/scripts/arch/: PKGBUILD
client/scripts/debian/: postinst.sh  postrm.sh  start-tomato.sh  tomato.desktop
client/src/: App.svelte  Login.svelte  Main.svelte  Player.svelte  SyncModal.svelte  app.js  fonts.css  index.njk  main.js  preload.js  script.js  styles.css  utils.js
client/src/_includes/: login.njk
client/src/components/: Icon.svelte  Modal.svelte  login.js
client/src/helpers/: login.js  sync.js
client/src/js/: login.js
client/src/main/: Alerts.svelte  Clock.svelte  Header.svelte  Main.svelte  Player.svelte  SettingsModal.svelte  SyncModal.svelte
client/src/main/components/: Modal.svelte
client/src/main/modals/: AssetPicker.svelte  Settings.svelte  Sync.svelte
client/src/main/player/: AssetSwapper.svelte  Bar.svelte  Buttons.svelte  List.svelte  PlayBar.svelte  SinglePlayRotators.svelte
client/src/store/: conn.js
client/src/stores/: alerts.js  assets.js  client-logs.js  config.js  connection.js  db.js  generated-stopset.js  midi.js  player.js  single-play-rotators.js  store.js  sync-modal.js
client/src/streamdeck/: index.js
client/src/ui-components/: SyncModal.svelte
concepts/: index.html
controller/: 50-tomato-box.rules  README.md  boot.py  code.py  common.py  config.py  constants.py  settings.toml  settings.toml.sample  test.html  test_hid.html  test_midi.html  utils.py
controller/test/: index.html  package-lock.json  package.json
docs/: client.md  concepts.md  docs_macros.py  index.md  license.md  mkdocs.yml  pyproject.toml  server.md
docs/.overrides/: controller-test.html  main.html
docs/assets/: mathjax.js
docs/server/: index.md  installation.md
license/: index.html
search/: search_index.json
server/: .dockerignore  .env.sample  .flake8  Dockerfile  Makefile  compose.dev.yml  compose.yml  constants.json  docker-compose.dev.yml  docker-compose.nginx.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  index.html  manage.py  nginx.conf  nginx.conf.j2  nginx.conf.jinja  pyproject.toml  ws_api.py  wsgi.py
server/api/: __init__.py  __main__.py  app.py  base.py  connections.py  schemas.py  server_messages.py  utils.py
server/installation/: index.html
server/nginx/: Dockerfile
server/nginx/image/docker-entrypoint.d/: 25-jinja2-on-templates.sh
server/nginx/image/etc/nginx/templates/: app.conf.j2
server/tomato/: admin.py  apps.py  constants.py  ffmpeg.py  manage.py  middleware.py  models.py  settings.py  tasks.py  tests.py  urls.py  utils.py  views.py
server/tomato/admin/: __init__.py  asset.py  base.py  client_log_entry.py  config.py  constance.py  rotator.py  server_log_entry.py  stopset.py  user.py
server/tomato/admin/views/: __init__.py  asset_data.py  base.py  configure_live_clients.py  data.py
server/tomato/management/commands/: constance.py  create_groups.py  generate_tomato_constants.py  prefill_sample_data.py  setup_digitalocean_spaces.py  test_notify_db_changes_to_api.py
server/tomato/migrations/: 0001_initial.py  0002_alter_user_enable_client_logs.py  0002_finalize_clientlogentry_types.py  0003_rotator_enabled.py  0004_single_play_rotators.py  0005_asset_alternates.py  0005_asset_alternates_save_asset_files.py  0005_asset_safe_delete.py  0005_configure_live_client_perms.py  0006_pg_notify_triggers.py  0007_asset_archived.py  0008_rotator_evenly_cycle.py  0009_extra_perms.py  0010_user_emails.py  0011_asset_comment.py  0012_remove_pgtrigger.py
server/tomato/models/: __init__.py  asset.py  base.py  client_log_entry.py  import_export.py  rotator.py  serialize.py  stopset.py  user.py
server/tomato/static/admin/tomato/configure_live_clients/: configure_live_clients.js  package-lock.json  package.json
server/tomato/submit/: forms.py  urls.py  views.py
server/tomato/templates/admin/: app_list.html  base_site.html  change_list.html
server/tomato/templates/admin/constance/: change_list.html
server/tomato/templates/admin/extra/: asset_data.html  base.html  configure_live_clients.html  configure_live_clients_iframe.html  data.html
server/tomato/templates/admin/tomato/: change_list.html
server/tomato/templates/admin/tomato/asset/: change_list.html  submit_line.html  upload.html
server/tomato/templates/admin/tomato/clientlogentry/: change_list.html
server/tomato/templates/admin/tomato/rotator/: change_form.html
server/tomato/templates/registration/: logged_out.html
server/tomato/templates/tomato/submit/: base.html  create.html  login.html
server/tomato/templatetags/: submit.py
server/tomato/tomato/: apps.py
