[tool.poetry]
name = "tomato"
version = "0.0.1-dev0"
description = "Tomato Radio Automation Server"
authors = ["David Cooper <david.cooper@burningman.org>"]
license = "MIT"
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
django-admin-logs = "^1.3.0"
django-admin-notice = "^3.2.0"
django-constance = "^4.1.3"
django-dirtyfields = "^1.9.5"
django-environ = "^0.11.2"
django-file-form = "^3.8.0"
django-pgtrigger = "^4.13.2"
django-user-messages = "^1.1.0"
gunicorn = "^23.0.0"
huey = "^2.5.2"
psycopg = "^3.2.3"
python-dotenv = "^1.0.1"
schema = "^0.7.7"
starlette = "^0.41.3"
typing-extensions = "^4.12.2"  # For Python 3.13 + pgtrigger
uvicorn = {extras = ["standard"], version = "^0.32.1"}
wait-for-it = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
flake8 = "^7.1.1"
ipdb = "^0.13.13"
ipython = "^8.30.0"
isort = "^5.13.2"
pywatchman = "^2.0.0"
watchdog = {extras = ["watchmedo"], version = "^6.0.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]
preview = true
enable-unstable-feature = [
    "multiline_string_handling", "string_processing", "wrap_long_dict_values_in_parens",
    "hex_codes_in_unicode_sequences", "hug_parens_with_braces_and_square_brackets"
]

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_sort_within_sections = true
combine_as_imports = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'DJANGO', 'STARLETTE', 'DJANGOTHIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_starlette = ['starlette', 'uvicorn']
known_django = ['django']
known_djangothirdparty = ['constance', 'dirtyfields', 'django_file_form', 'environ', 'huey.contrib', 'safedelete', 'user_messages']
skip = ['migrations']
