[tool.poetry]
name = "tomato"
version = "0.0.1-dev0"
description = "Tomato Radio Automation Server"
authors = ["David Cooper <david.cooper@burningman.org>"]
license = "MIT"
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
django-admin-logs = "^1.4.0"
django-admin-notice = "^3.3.0"
django-constance = "^4.3.2"
django-dirtyfields = "^1.9.7"
django-environ = "^0.12.0"
django-file-form = "^3.9.0"
django-pgtrigger = "^4.15.3"
django-user-messages = "^1.1.0"
gunicorn = "^23.0.0"
huey = "^2.5.3"
psycopg = "^3.2.9"
python-dotenv = "^1.1.0"
schema = "^0.7.7"
starlette = "^0.47.0"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
wait-for-it = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
django-debug-toolbar = "^5.2.0"
django-extensions = "^4.1"
flake8 = "^7.2.0"
ipdb = "^0.13.13"
ipython = "^9.3.0"
isort = "^6.0.1"
pywatchman = "^2.0.0"
watchdog = {extras = ["watchmedo"], version = "^6.0.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]
preview = true
enable-unstable-feature = [
    "multiline_string_handling", "string_processing", "wrap_long_dict_values_in_parens",
    "hug_parens_with_braces_and_square_brackets"
]

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_sort_within_sections = true
combine_as_imports = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'DJANGO', 'STARLETTE', 'DJANGOTHIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_starlette = ['starlette', 'uvicorn']
known_django = ['django']
known_djangothirdparty = ['constance', 'dirtyfields', 'django_file_form', 'environ', 'huey.contrib', 'safedelete', 'user_messages']
skip = ['migrations']
